adding my name as author

--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "devDependencies": {
     "jest": "^29.7.0"
   },
-   "author": "Your Name",
+   "author": "Richard Ayikwei",
   "license": "GPL-3.0"
 }
